[gd_scene load_steps=11 format=3 uid="uid://cxrbcscsvnx7v"]

[ext_resource type="PackedScene" uid="uid://dbsdxsqosmq35" path="res://char_files/stand.tscn" id="1_61bui"]
[ext_resource type="Script" path="res://levels/paint_wall_mission.gd" id="1_hsgk6"]
[ext_resource type="PackedScene" uid="uid://c3i4cepfmwlay" path="res://char_files/billboard.tscn" id="1_xtg8a"]
[ext_resource type="PackedScene" uid="uid://dnsco05646th5" path="res://char_files/castro.tscn" id="2_nw843"]
[ext_resource type="PackedScene" uid="uid://dbgmj1b2oipyq" path="res://char_files/level_text.tscn" id="5_do5sb"]
[ext_resource type="PackedScene" uid="uid://cwn0od8c4ie8j" path="res://char_files/score_board.tscn" id="6_ykyyb"]
[ext_resource type="PackedScene" uid="uid://f7lcieg80ccc" path="res://levels/lose_label.tscn" id="7_ag8a7"]
[ext_resource type="PackedScene" uid="uid://0ge0355cdx55" path="res://char_files/cia.tscn" id="7_wroqc"]
[ext_resource type="PackedScene" uid="uid://drgildw4smgq1" path="res://char_files/explosion.tscn" id="8_0nvwx"]
[ext_resource type="PackedScene" uid="uid://b8q37dym60h3y" path="res://char_files/blood_wall.tscn" id="9_s60h3"]

[node name="paint_wall_mission" type="Node2D"]
script = ExtResource("1_hsgk6")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -321.0
offset_top = 33.0
offset_right = 1314.0
offset_bottom = 315.0
color = Color(0.329412, 0.454902, 0.403922, 1)

[node name="stand2" parent="." instance=ExtResource("1_61bui")]
position = Vector2(243, 12)

[node name="stand" parent="." instance=ExtResource("1_61bui")]
position = Vector2(-248, 8)

[node name="billboard" parent="." instance=ExtResource("1_xtg8a")]
position = Vector2(-11, -235)
bill = 1

[node name="castro" parent="." instance=ExtResource("2_nw843")]
position = Vector2(1221, 177)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -1885.0
offset_top = 33.0
offset_right = -278.0
offset_bottom = 315.0
color = Color(0.372549, 0.439216, 0.435294, 1)

[node name="billboard2" parent="." instance=ExtResource("1_xtg8a")]
position = Vector2(-10, -235)

[node name="lvTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="winTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="bartime" type="Timer" parent="."]
wait_time = 0.041
autostart = true

[node name="time_rect" type="ColorRect" parent="."]
offset_left = -299.0
offset_top = -461.0
offset_right = 301.0
offset_bottom = -421.0
color = Color(0.643137, 0.176471, 0.215686, 1)

[node name="level_text" parent="." node_paths=PackedStringArray("level") instance=ExtResource("5_do5sb")]
position = Vector2(402, -416)
tx = 6
level = NodePath("..")

[node name="score_board" parent="." instance=ExtResource("6_ykyyb")]
position = Vector2(0, -400)

[node name="cia" parent="." instance=ExtResource("7_wroqc")]
position = Vector2(1608, 181)

[node name="lose label" parent="." instance=ExtResource("7_ag8a7")]
position = Vector2(0, 820)

[node name="explosion" parent="." instance=ExtResource("8_0nvwx")]
position = Vector2(2, 172)

[node name="blood_wall" parent="." instance=ExtResource("9_s60h3")]
position = Vector2(-8, 174)

[connection signal="timeout" from="lvTimer" to="." method="_on_lv_timer_timeout"]
[connection signal="timeout" from="winTimer" to="." method="_on_win_timer_timeout"]
[connection signal="timeout" from="bartime" to="." method="_on_bartime_timeout"]
